--- a/assets/css/font-awesome.css
+++ b/assets/css/font-awesome.css
@@ -6,8 +6,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('https://viitaset.github.io/meeting/assets/css/fonts/fontawesome/fontawesome-webfont.eot?v=4.7.0');
-  src: url('https://viitaset.github.io/meeting/assets/css/fonts/fontawesome/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('https://viitaset.github.io/meeting/assets/css/fonts/fontawesome/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('https://viitaset.github.io/meeting/assets/css/fonts/fontawesome/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('https://viitaset.github.io/meeting/assets/css/fonts/fontawesome/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('https://viitaset.github.io/meeting/assets/css/fonts/fontawesome/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+  src: url('/assets/css/fonts/fontawesome/fontawesome-webfont.eot?v=4.7.0');
+  src: url('/assets/css/fonts/fontawesome/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('/assets/css/fonts/fontawesome/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('/assets/css/fonts/fontawesome/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('/assets/css/fonts/fontawesome/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('/assets/css/fonts/fontawesome/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
