--- a/assets/css/octicons/octicons.css
+++ b/assets/css/octicons/octicons.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'octicons';
-   src: url('/assets/css/octicons/octicons.eot?#iefix') format('embedded-opentype'),
-        url('/assets/css/octicons/octicons.woff') format('woff'),
-        url('/assets/css/octicons/octicons.ttf') format('truetype'),
-        url('/assets/css/octicons/octicons.svg#octicons') format('svg');
+   src: url('https://viitaset.github.io/meeting/assets/css/octicons/octicons.eot?#iefix') format('embedded-opentype'),
+        url('https://viitaset.github.io/meeting/assets/css/octicons/octicons.woff') format('woff'),
+        url('https://viitaset.github.io/meeting/assets/css/octicons/octicons.ttf') format('truetype'),
+        url('https://viitaset.github.io/meeting/assets/css/octicons/octicons.svg#octicons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
